# sdl-game

./: .gitignore  :q  CMakeLists.txt  CMakeSettings.json  LICENSE  LICENSE_HEADER  README.md  cpp.hint  log.xlsx  log1.xlsx  meson.build  sdl-game.geany  test.c  todo.txt  vcpkg_targets.txt
OLD/engine/extra/: CMakeLists.txt
catch/: CMakeLists.txt
catch/assets/: assets.json  config-win.json  raspberry.json  test.json
catch/assets/textures/: animtest.xcf  raspberry.xcf
catch/include/: raspberry.hpp
catch/src/: Game.cpp  Game.hpp  Raspberry.cpp  Raspberry.hpp  Spoon.cpp  game.cpp  game.hpp  main.cpp  raspberry.cpp  raspberry.hpp  spoon.cpp
engine/: Assets.cpp  BoundingBox.cpp  CMakeLists.txt  Camera.cpp  Canvas.hpp  Context.cpp  Context.hpp  Group.cpp  Group.hpp  KeyFrameSprite.cpp  LocationStack.cpp  MovingAverage.hpp  ScrollingText.hpp  Sprite.cpp  Sprite.hpp  StateBasedGame.cpp  core_api.hpp  engine.depend
engine/core/: CMakeLists.txt
engine/core/depreciated/: Animation.cpp  ImageFont.cpp  ImageFont.hpp  stdafx.hpp
engine/core/include/: Animation.hpp  Assets.hpp  BoundingBox.hpp  Camera.hpp  Color.hpp  Context.hpp  DebugInfo.hpp  Font.hpp  Game.hpp  Group.hpp  Group.inl  KeyFrameSprite.hpp  OneShot.hpp  ScrollingText.hpp  Sprite.hpp  State.hpp  StateBasedGame.hpp  Texture.hpp  Timer.hpp  Transition.hpp  Util.hpp  animation.hpp  assets.hpp  camera.hpp  color.hpp  context.hpp  core_api.hpp  debuginfo.hpp  dynamic.hpp  engine.hpp  entity.hpp  fs.hpp  group.hpp  group.inl  imagefont.hpp  keyframesprite.hpp  line.hpp  locationstack.hpp  msgbox.hpp  object.hpp  (+8 more)
engine/core/src/: Animation.cpp  Assets.cpp  Assets.hpp  BoundingBox.cpp  BoundingBox.hpp  CairoUtil.cpp  CairoUtil.hpp  Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  Color.cpp  Color.hpp  Context.cpp  Context.hpp  DebugInfo.cpp  DebugInfo.hpp  Font.cpp  Font.hpp  Game.cpp  Game.hpp  Group.cpp  Group.hpp  Group.inl  ImageFont.cpp  KeyFrameSprite.cpp  (+63 more)
engine/include/: animation.h  assets.h  asynctimer.hpp  camera.h  camera.hpp  controllers.h  controllers.hpp  engine.h  engine.hpp  gamepad.h  group.h  group.hpp  imagefont.h  imagetext.h  light.h  line.hpp  locationstack.h  oneshot.h  oneshot.hpp  particle.h  particleengine.h  point.h  sprite.h  sprite.hpp  state.h  text.h  texture.h  timer.h  transition.hpp  util.h
engine/soundchip/: CMakeLists.txt
engine/src/: Animation.cpp  Animation.hpp  Assets.cpp  Assets.hpp  BoundingBox.cpp  BoundingBox.hpp  CairoUtil.hpp  Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  Clock.cpp  Clock.hpp  Color.cpp  Color.hpp  ConfigScript.cpp  ConfigScript.hpp  Context.cpp  Context.hpp  Debugger.cpp  Debugger.hpp  Font.cpp  Font.hpp  Game.cpp  Game.hpp  Group.cpp  Group.hpp  Group.inl  KeyFrameSprite.cpp  KeyFrameSprite.hpp  Keyboard.cpp  Keyboard.hpp  Light.cpp  Light.hpp  LightStage.cpp  LightStage.hpp  Line.cpp  Line.hpp  LocationStack.cpp  LocationStack.hpp  (+73 more)
engine/structure/: CMakeLists.txt
engine/ui/: CMakeLists.txt
fork/: CMakeLists.txt
game/: CMakeLists.txt
game/assets/: config-win.json  textures-all.json
game/include/: battle.hpp  game.hpp  groupmanager.hpp  npc.hpp  player.hpp
game/src/: battle.cpp  config.hpp  door.cpp  game.cpp  game.hpp  groupmanager.hpp  item.cpp  main.cpp  npc.cpp  player.cpp  player.hpp  stats.cpp  stats.hpp
games/missiles/: CMakeLists.txt
games/newgame/: CMakeLists.txt
games/rpg/: CMakeLists.txt
libs/gui/: CMakeLists.txt
missiles/: CMakeLists.txt
missiles/assets/: config.json
missiles/src/: game.cc  game.h  main.cc  missile.cc  missile.h  myutil.cc  plane.cc  plane.h  projectile.cc  projectile.h
raspberry_catch/: CMakeLists.txt
raspberry_catch/assets/: assets.json  config-win.json
raspberry_catch/include/: raspberry.hpp
raspberry_catch/src/: game.cpp  main.cpp  raspberry.cpp
roguelike/: CMakeLists.txt  roguelike.cbp  roguelike.depend  roguelike.geany
roguelike/assets/: atlas.txt  atlas.xcf  chest.xcf  config.json  grid.json  layout.json
roguelike/src/: App.cpp  App.hpp  Battle.cpp  Battle.hpp  Chest.cpp  Chest.hpp  Config.cpp  Config.hpp  Dungeon.cpp  Dungeon.hpp  Enemy.cpp  Enemy.hpp  Grid.cpp  Grid.hpp  GridAlign.cpp  GridSprite.cpp  GridSprite.hpp  Hud.cpp  Hud.hpp  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp  Layout.cpp  Layout.hpp  Map.cpp  Map.hpp  MapGen.cpp  MapGen.hpp  Maze.cpp  Maze.hpp  Menu.cpp  Menu.hpp  Npc.cpp  Npc.hpp  Player.cpp  Player.hpp  Stats.cpp  Stats.hpp  Stuff.cpp  (+10 more)
rpg/: CMakeLists.txt  Config.cpp  Dungeon.hpp  Enemy.hpp  MapTest.hpp  StateManager.cpp
rpg/assets/: config-win.json  config.json  config.stf  particleanim.json  particles.json  test.map  textures-all.json  textures-all.stf  textures.json  textures.stf  tilemap-test.json  tilemap-test.stf
rpg/include/: config.hpp  game.hpp  groupmanager.hpp  npc.hpp
rpg/scripts/: generate_floor.lua  tools.lua
rpg/src/: App.cpp  App.hpp  Config.cpp  Config.hpp  DialogueBox.cpp  DialogueBox.hpp  Door.cpp  Door.hpp  Dungeon.cpp  Dungeon.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  GroupManager.cpp  GroupManager.hpp  Item.cpp  Item.hpp  MapTest.cpp  MapTest.hpp  MyGame.cpp  MyGame.hpp  Npc.cpp  Npc.hpp  Player.cpp  Player.hpp  Room.cpp  Room.hpp  SaveFile.cpp  SaveFile.hpp  Snapshot.cpp  Snapshot.hpp  StateManager.cpp  StateManager.hpp  StaticGM.cpp  StaticGM.hpp  Stats.cpp  Stats.hpp  Title.cpp  Title.hpp  (+31 more)
runner/: CMakeLists.txt
runner/assets/: jet.lua
runner/src/: background.cc  background.h  game.cc  game.h  main.cc  player.cc  player.h  quadratic.cc  quadratic.h  sigmoid.cc  sigmoid.h
stf/: CMakeLists.txt
stf/include/: stf.hpp
stf/src/: Entry.cpp  Entry.hpp  Loader.cpp  Loader.hpp  Section.cpp  Section.hpp
stftest/: CMakeLists.txt
stftest/assets/: test.stf
stftest/src/: main.cpp
stufftest/: CMakeLists.txt
stufftest/assets/: test.stf
stufftest/src/: main.cpp
testbench/: CMakeLists.txt
testbench/src/: App.cpp  App.hpp
tools/libmaze/: CMakeLists.txt  Makefile
tools/mapviewer/: CMakeLists.txt  main.c  maze.c  maze.h  out.hex
tools/scale/: CMakeLists.txt  main.c
tools/tpack/: CMakeLists.txt
(+561 files in other folders)
